[fix] fixed mouse icon click not being detected due to z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,6 @@ nav.fixed-top .nav-link.active {
   width: 100%;
   position: relative;
   overflow: hidden;
-  z-index: -2;
 }
 
 #hero-image::after{
@@ -122,13 +121,14 @@ nav.fixed-top .nav-link.active {
   width: 100%;
   height: 100%;
   background-color: rgba(4, 4, 4, 0.7);
-  z-index: -1;
+  
 }
 
 #hero-text {
   color: white;
   margin: auto 3rem auto 3rem;
   text-align: center;
+  z-index: 1;
 }
 
 #hero-name {
@@ -147,6 +147,7 @@ margin-bottom: 10px;
   border-radius: 15px;
   height: 42px;
   width: 30px;
+  z-index: 3;
 }
 
 .mouse-icon .wheel {
@@ -162,6 +163,7 @@ margin-bottom: 10px;
   -webkit-animation: down 1s infinite linear;
   animation-play-state: running;
   -webkit-animation-play-state: running;
+  z-index: 3;
 }
 
 @keyframes down {
@@ -242,12 +244,19 @@ margin-bottom: 10px;
 }
 
 /* todo: ADD MEDIA QUERIES FOR DIFFERENT WIDTHS & HEIGHTS */
+@media only screen and (max-width: 1440px){
+  #profile_image_div img {
+    width: 441px;
+    height: 523px;
+  } 
+  
+}
+
 @media only screen and (max-width: 1024px){
   #profile_image_div img {
     width: 341px;
     height: 423px;
-  }
-  
+  } 
 }
 
 @media only screen and (max-width: 425px){
@@ -278,6 +287,8 @@ margin-bottom: 10px;
 /* ---- PROJECTS ---- */
 #projects {
   display: grid;
+  align-items: center;
+  justify-content: center;
   background-color: #f4f4f4;
   padding-top: 10rem;
   padding-bottom: 100px;
